# local-knowledge-rag-mcp

./: README.md  ROADMAP.md  cli.py  config.example.yaml  pyproject.toml  requirements.txt  setup.ps1
doc_rag/: chunker.py  cli.py  config.py  embedder.py  mcp_server.py  parser.py  paths.py  store.py
doc_rag/loaders/: __init__.py  base.py  docx.py  markdown.py  pdf.py  registry.py  spreadsheet.py  text.py
doc_reg/: cli.py  document.py  indexer.py  mcp_server.py  paths.py  searcher.py
doc_reg/loaders/: base.py  docx.py  markdown.py  pdf.py  registry.py  spreadsheet.py  text.py
docs/: ai-install-summary.md  ccc-test-cases.md
tests/: test_config.py  test_indexer.py  test_loaders.py  test_searcher.py
